fixed spacing issues

--- a/src/components/scss/home.scss
+++ b/src/components/scss/home.scss
@@ -4,6 +4,7 @@
 .home{
     @include flex-column;
     align-items: center;
+    justify-content: space-between;
     height: 100vh;
     background-repeat: no-repeat;
 }
